fixed navbar border radius, fixed pagination display, fixed alignment, fixed extra whitespace on articles

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,7 +8,7 @@
   color:white;
 }
 .parallax-container {
-    height: 50%;
+    height: 60%;
   }
 
 .padded-container{
